--- a/views/vi_editarusuario.html
+++ b/views/vi_editarusuario.html
@@ -4,7 +4,7 @@
    <script src="scripts/dropdown_tabelausuario/load_estados.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_municipios.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_agencias.js"></script>
-   
+   <script src="scripts/load_userbyid.js"></script>
 </head>
 <!-- Modal -->
 <div class="modal fade custom-modal" id="criar_usuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -45,50 +45,33 @@
                            <div class="col-md-3">
                               <label class="text-dark">Tipo de Usuário</label>
                               <select id="sel_tiposusuario" name="tipo_usuario" class="form-select" required>
-                                 <option value="" disabled selected>Selecione um tipo de usuário</option>
+                                 <option value="" id="sel_tiposusuario" disabled selected>Selecione um tipo de usuário</option>
                               </select>
                            </div>
                            <div class="col-md-3">
                               <label class="text-dark">Estado</label>
                               <select id="sel_estados" name="estado" class="form-select" required>
-                                 <option value="" disabled selected>Selecione um estado</option>
+                                 <option value="" id="sel_estados" disabled selected>Selecione um estado</option>
                               </select>
                            </div>
                            <div class="col-md-3">
                               <label for="municipio" class="text-dark">Municipio:</label>
                               <select id="sel_municipios" name="municipio" class="form-select"  required disabled>
-                                 <option value="">Seleccionar Municipio</option>
+                                 <option value=""  id="sel_municipios">Seleccionar Municipio</option>
                               </select>
                            </div>
                            <div class="col-md-3">
                               <label for="agencia" class="text-dark">Agência:</label>
                               <select id="sel_agencias" name="agencia" class="form-select"  required disabled>
-                                 <option value="">Seleccionar Agência</option>
+                                 <option value="" id="sel_agencias"> Seleccionar Agência</option>
                               </select>
                            </div>
                         </div>
-                        <!-- Terceira linha (período início e fim) -->
-                        <!-- <div class="row mb-3">
-                           <div class="col-md-6">
-                               <label>Período - Início</label>
-                               <input id="data_inicio" type="date" name="inicio_periodo" class="form-control" required>
-                           </div>
-                           <div class="col-md-6">
-                               <label>Período - Fim</label>
-                               <input id="data_fim" type="date" name="fim_periodo" class="form-control" required>
-                           </div>
-                           </div> -->
+                     
                      </form>
                   </div>
                </div>
             </div>
-            <script>
-               // Define a data atual no formato YYYY-MM-DD para o campo de data
-            //    const today = new Date().toISOString().split('T')[0];
-               
-            //    document.getElementById('data_inicio').value = today;
-            //    document.getElementById('data_fim').value = today;
-            </script>
          </div>
          <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
