query get by id con todos los campos

--- a/views/vi_criarusuario.html
+++ b/views/vi_criarusuario.html
@@ -4,6 +4,7 @@
    <script src="scripts/dropdown_tabelausuario/load_estados.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_municipios.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_agencias.js"></script>
+   <!-- <script src="scripts/form_tabelausuario.js"></script> -->
    
 </head>
 <!-- Modal -->
@@ -91,7 +92,7 @@
             </script>
          </div>
          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+            <button id="btsalvar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
             <button type="button" class="btn btn-primary">Salvar</button>
          </div>
       </div>
