--- a/views/vi_criarusuario.html
+++ b/views/vi_criarusuario.html
@@ -4,7 +4,7 @@
    <script src="scripts/dropdown_tabelausuario/load_estados.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_municipios.js"></script>
    <script src="scripts/dropdown_tabelausuario/load_agencias.js"></script>
-   <!-- <script src="scripts/form_tabelausuario.js"></script> -->
+   <script src="scripts/form_tabelausuario.js"></script>
    
 </head>
 <!-- Modal -->
@@ -25,7 +25,7 @@
                      </h4>
                   </div>
                   <div class="card-body">
-                     <form class="card-text form-login" action="" autocomplete="off">POST
+                     <form class="card-text form-login" action="" autocomplete="off"><!--POST-->
                         <!-- Primeira linha (nome, código e senha) -->
                         <div class="row mb-3">
                            <div class="col-md-4">
@@ -92,8 +92,8 @@
             </script>
          </div>
          <div class="modal-footer">
-            <button id="btsalvar" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
-            <button type="button" class="btn btn-primary">Salvar</button>
+            <button  type="button" class="btn btn-secondary" data-bs-dismiss="modal">Voltar</button>
+            <button id="btsalvar" type="button" class="btn btn-primary" disabled>Salvar</button>
          </div>
       </div>
    </div>
