--- a/views/vi_editarusuario.html
+++ b/views/vi_editarusuario.html
@@ -25,7 +25,7 @@
                      </h4>
                   </div>
                   <div class="card-body">
-                     <form class="card-text form-login" action="" autocomplete="off">POST
+                     <form class="card-text form-login" action="" autocomplete="off">
                         <!-- Primeira linha (nome, código e senha) -->
                         <div class="row mb-3">
                            <div class="col-md-4">
