bug and funtionalities in table user

--- a/views/vi_tabelausuario.html
+++ b/views/vi_tabelausuario.html
@@ -34,7 +34,7 @@
                             </tr>
                         </thead>
                         <!-- Aquí se insertarán las filas dinámicamente -->
-                        <tbody></tbody> 
+                        <tbody id="tusers"></tbody> 
                     </table>
                 </div>
             </div>
