bugs and cleaning

--- a/views/vi_editarusuario.html
+++ b/views/vi_editarusuario.html
@@ -8,7 +8,7 @@
   <!-- <script src="scripts/form_tabelausuario.js"></script> -->
 </head>
 <!-- Modal -->
-<div class="modal fade custom-modal" id="criar_usuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade custom-modal" id="editar_usuario" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog">
    <div class="modal-content">
       <div class="modal-header">
