--- a/views/vi_criarusuario.html
+++ b/views/vi_criarusuario.html
@@ -36,10 +36,10 @@
                               <label class="text-dark">Código</label>
                               <input type="text" id="codigo" name="codigo" class="form-control" maxlength="20" minlength="4" placeholder="Ingresse o código" required>
                            </div>
-                           <div class="col-md-4">
+                           <!-- <div class="col-md-4">
                               <label class="text-dark">Senha</label>
                               <input type="password" id="senha" name="senha" class="form-control" maxlength="20" placeholder="Ingresse sua senha" required>
-                           </div>
+                           </div> -->
                         </div>
                         <!-- Segunda linha (tipo de usuário, estado, município e agência) -->
                         <div class="row mb-3" id="item">
@@ -61,7 +61,7 @@
                                  <option value="">Seleccionar Municipio</option>
                               </select>
                            </div>
-                           <div class="col-md-3" id="sel_agencias">
+                           <div class="col-md-3">
                               <label for="agencia" class="text-dark">Agência:</label>
                               <select id="sel_agencias" name="agencia" class="form-select"  required disabled>
                                  <option value="">Seleccionar Agência</option>
