--- a/assets/styles/vi_acessos.scss
+++ b/assets/styles/vi_acessos.scss
@@ -63,7 +63,7 @@
     border-bottom: none;
     overflow-y: auto;
     background-color: transparent !important;
-    height: Calc(100vh - 2.8rem) !important;
+    /*height: Calc(100vh - 2.8rem) !important;*/
     max-height: fit-content;
     z-index:1;
 }
