--- a/views/form_anexo.html
+++ b/views/form_anexo.html
@@ -15,7 +15,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="title_anexo">Anexo</h1>
-        <button type="button" class="btn-close bt_anexo" data-toggle="modal" data-target="#modal_anexo" aria-label="Close"></button>
+        <button type="button" class="btn button-close text-white bg-transparent">X</button>
+        <!-- <button type="button" class="btn-close bt_anexo" data-toggle="modal" data-target="#modal_anexo" aria-label="Close"></button> -->
       </div>
       <div class="modal-body">
         <div class="mb-3">
@@ -28,7 +29,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary">Linpar</button>
+        <button type="button" class="btn btn-secondary">Limpar</button>
         <button type="button" class="btn btn-primary">Anexar</button>
       </div>
     </div>
